<resources>
    <string name="app_name">MOBV Zadanie</string>
    <string name="title_login">Prihlásenie</string>
    <string name="title_intro">Intro</string>
    <string name="title_signup">Registrácia</string>
    <string name="mapbox_access_token">sk.eyJ1IjoibWFyZWtkcmFiIiwiYSI6ImNsbm12aDVnODAwNWUya21ueGxheGg3NzAifQ.MOWq4WAzjcIzlHx_98g_sA</string>
    <string name="forgotten_pw">Zabudnuté heslo</string>
    <string name="email">Email:</string>
    <string name="input_email">Zadajte email</string>
    <string name="send">Odoslať</string>
    <string name="pw">Heslo</string>
    <string name="repeat_pw">Opakujte heslo</string>
    <string name="insert_pw">Zadajte heslo</string>
    <string name="insert_code">Zadajte kód</string>
    <string name="code">Kód</string>
    <string name="change_pw">Zmena hesla</string>
    <string name="old_pw">Staré heslo</string>
    <string name="new_pw">Nové heslo</string>
    <string name="submit">Potvrdiť</string>
    <string name="profile">Profil</string>
    <string name="load_profile">Načítaj profil</string>
    <string name="logout">Odhlásiť sa</string>
    <string name="name">Meno</string>
    <string name="get_location">Získavať polohu</string>
    <string name="settings">Nastavenia</string>
    <string name="insert_time">Vložiť čas</string>
    <string name="get_circle">Merať okruh</string>
    <string name="time_hint">(HH:mm:ss)</string>
    <string name="profile_photo_desc">Profilová fotka</string>
    <string name="login">Prihlásiť sa</string>
    <string name="username">Login</string>
    <string name="insert_username">Zadajte login</string>
    <string name="registrate">Registruj sa</string>
    <string name="location_sharing">Na zobrazenie zoznamu je potrebné povoliť získavanie polohy</string>
</resources>