<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        tools:context=".fragments.LoginFragment">


        <TextView
            android:id="@+id/header_title"
            android:layout_width="355dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/change_pw"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.194" />


        <EditText
            android:id="@+id/edit_text_email_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/old_pw"
            app:layout_constraintTop_toBottomOf="@+id/header_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edit_text_password1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_pw"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_email_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <EditText
            android:id="@+id/edit_text_password2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_pw"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password2"
            app:layout_constraintVertical_bias="0.224" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>